--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -305,7 +305,7 @@ body:after {
   height: 100%;
   z-index: -1;
   background-attachment: fixed;
-  background: linear-gradient(#ffffff, #c1c1c7);
+  background: linear-gradient(#f9f9fa, #ffffff);
   /* background-repeat: repeat, repeat-x; */
   background-size: cover;
 }
@@ -399,7 +399,7 @@ a {
 
 a:hover {
   border-bottom-color: transparent;
-  color: #ffe4b4;
+  color: #e1b7b4;
 }
 
 strong,
@@ -762,7 +762,7 @@ input[type="email"]:focus,
 input[type="tel"]:focus,
 select:focus,
 textarea:focus {
-  border-color: #ffe4b4;
+  border-color: #e1b7b4;
 }
 
 option {
@@ -878,13 +878,13 @@ input[type="radio"]:checked + label:before {
 
 input[type="checkbox"]:focus + label:before,
 input[type="radio"]:focus + label:before {
-  border-color: #ffe4b4;
-  box-shadow: 0 0 0 1px #ffe4b4;
+  border-color: #e1b7b4;
+  box-shadow: 0 0 0 1px #e1b7b4;
 }
 
 input[type="checkbox"]:focus:checked + label:before,
 input[type="radio"]:focus:checked + label:before {
-  background: #ffe4b4;
+  background: #e1b7b4;
 }
 
 input[type="checkbox"].color1 + label:before,
@@ -899,7 +899,7 @@ input[type="radio"].color2 + label:before {
 
 input[type="checkbox"].color3 + label:before,
 input[type="radio"].color3 + label:before {
-  color: #ffe4b4;
+  color: #e1b7b4;
 }
 
 input[type="checkbox"].color4 + label:before,
@@ -1526,7 +1526,7 @@ ul.contact-icons.color2 > li:before {
 }
 
 ul.contact-icons.color3 > li:before {
-  color: #ffe4b4;
+  color: #e1b7b4;
 }
 
 ul.contact-icons.color4 > li:before {
@@ -1645,8 +1645,8 @@ input[type="reset"]:hover,
 input[type="button"]:hover,
 button:hover,
 .button:hover {
-  box-shadow: inset 0 0 0 2px #ffe4b4;
-  color: #ffe4b4 !important;
+  box-shadow: inset 0 0 0 2px #e1b7b4;
+  color: #e1b7b4 !important;
 }
 
 input[type="submit"]:active,
@@ -1784,7 +1784,7 @@ input[type="reset"].primary.color3,
 input[type="button"].primary.color3,
 button.primary.color3,
 .button.primary.color3 {
-  color: #ffe4b4 !important;
+  color: #e1b7b4 !important;
 }
 
 input[type="submit"].primary.color4,
@@ -1800,7 +1800,7 @@ input[type="reset"].primary:hover,
 input[type="button"].primary:hover,
 button.primary:hover,
 .button.primary:hover {
-  background-color: #ffe4b4;
+  background-color: #e1b7b4;
 }
 
 input[type="submit"].primary:active,
@@ -2319,7 +2319,7 @@ button:disabled,
 
 .panel > *.color0 {
   background-image: url("../../images/overlay.png"),
-    linear-gradient(45deg, #726193 20%, #e79798 60%, #ffe4b4, #a4b9b7);
+    linear-gradient(45deg, #726193 20%, #e79798 60%, #e1b7b4, #a4b9b7);
   background-size: 128px 128px, auto;
 }
 
@@ -2356,7 +2356,7 @@ button:disabled,
       rgba(255, 228, 180, 0.25)
     );
   background-size: 128px 128px, auto;
-  background-color: #ffe4b4;
+  background-color: #e1b7b4;
 }
 
 .panel > *.color4 {
@@ -2965,7 +2965,7 @@ button:disabled,
 
 .panel.color0 {
   background-image: url("../../images/overlay.png"),
-    linear-gradient(45deg, #726193 20%, #e37b7c 60%, #ffe4b4);
+    linear-gradient(45deg, #726193 20%, #e37b7c 60%, #e1b7b4);
   background-size: 128px 128px, auto;
 }
 
@@ -3002,7 +3002,7 @@ button:disabled,
       rgba(255, 228, 180, 0.25)
     );
   background-size: 128px 128px, auto;
-  background-color: #ffe4b4;
+  background-color: #e1b7b4;
 }
 
 .panel.color4 {
@@ -3107,7 +3107,7 @@ button:disabled,
         rgba(255, 228, 180, 0.25)
       );
     background-size: 128px 128px, auto;
-    background-color: #ffe4b4;
+    background-color: #e1b7b4;
   }
 
   .panel > *.color4 {
@@ -3664,7 +3664,7 @@ button:disabled,
         rgba(255, 228, 180, 0.25)
       );
     background-size: 128px 128px, auto;
-    background-color: #ffe4b4;
+    background-color: #e1b7b4;
   }
 
   .panel.color4 {
