--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1007,9 +1007,9 @@ input[type="radio"] + label:before {
 .image.filtered:after {
   background: linear-gradient(
     45deg,
-    rgba(0, 0, 0, 0.75) 25%,
-    rgba(0, 0, 0, 0.75) 50%,
-    rgba(0, 0, 0, 0.75)
+    rgba(0, 0, 0, 0.55) 25%,
+    rgba(0, 0, 0, 0.55) 50%,
+    rgba(0, 0, 0, 0.55)
   );
   pointer-events: none;
   content: "";
@@ -1029,16 +1029,14 @@ input[type="radio"] + label:before {
     rgba(0, 0, 0, 0.9) 50%,
     rgba(0, 0, 0, 0.9)
   );
-  background-size: 128px 128px, auto, auto;
 }
-.image.filtered.tinted.darkened:after {
+.image.light-darkened :after {
   background: linear-gradient(
-    0deg,
-    rgba(0, 0, 0, 1) 25%,
-    rgba(0, 0, 0, 1),
-    /* rgba(var(--color-dark), 0.85) */
+    45deg,
+    rgba(0, 0, 0, 0.9) 25%,
+    rgba(0, 0, 0, 0.9) 50%,
+    rgba(0, 0, 0, 0.9)
   );
-  /* color: rgb(34, 34, 34); */
 }
 
 .image[data-position] img {
@@ -1648,7 +1646,7 @@ button,
   color: rgba(255, 255, 255, 0.875) !important;
   cursor: pointer;
   display: inline-block;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
   font-size: 0.6rem;
   font-weight: 700;
   height: 2.75rem;
