--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3915,3 +3915,36 @@ body.is-preload #wrapper {
     transform: none;
   }
 }
+
+/* ######## PROJECT PAGE NAVIGATION ######## */
+#project-page-navigation {
+  margin-bottom: 5vh;
+}
+#project-page-navigation a {
+  text-decoration: none;
+  border: none;
+  font-size: 0.85rem;
+}
+#project-page-navigation a:hover {
+  border-bottom: solid 1px var(--color-accent-2);
+}
+#project-page-navigation i {
+  font-size: 0.65rem;
+  margin-left: 5px;
+  margin-right: 10px;
+}
+#project-page-navigation span {
+  font-size: 0.85rem;
+  border-bottom: solid 1px var(--color-accent-2);
+}
+#go-to-live__Link a {
+  border: solid 1px var(--color-accent-2);
+  padding: 10px;
+  color: var(--color-accent-2);
+}
+#go-to-live__Link a:hover {
+  border: solid 1px white;
+  padding: 10px;
+  color: white;
+  background-color: rgb(29, 185, 84);
+}
