--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1936,24 +1936,24 @@ button:disabled,
 }
 
 .gallery .image img {
-  -moz-transition: -moz-transform 0.2s ease-in-out;
-  -webkit-transition: -webkit-transform 0.2s ease-in-out;
-  -ms-transition: -ms-transform 0.2s ease-in-out;
-  transition: transform 0.2s ease-in-out;
+  -moz-transition: -moz-transform 0.6s ease-in-out;
+  -webkit-transition: -webkit-transform 0.6s ease-in-out;
+  -ms-transition: -ms-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out;
 }
 
 .gallery .image:after {
-  -moz-transition: opacity 0.2s ease-in-out;
-  -webkit-transition: opacity 0.2s ease-in-out;
-  -ms-transition: opacity 0.2s ease-in-out;
-  transition: opacity 0.2s ease-in-out;
+  -moz-transition: opacity 0.8s ease-in-out;
+  -webkit-transition: opacity 0.8s ease-in-out;
+  -ms-transition: opacity 0.8s ease-in-out;
+  transition: opacity 0.8s ease-in-out;
 }
 
 .gallery .image:hover img {
-  -moz-transform: scale(1.025);
-  -webkit-transform: scale(1.025);
-  -ms-transform: scale(1.025);
-  transform: scale(1.025);
+  -moz-transform: scale(1.15);
+  -webkit-transform: scale(1.15);
+  -ms-transform: scale(1.15);
+  transform: scale(1.15);
 }
 
 .gallery .image:hover:after {
@@ -3947,4 +3947,52 @@ body.is-preload #wrapper {
   padding: 10px;
   color: white;
   background-color: rgb(29, 185, 84);
+}
+
+/* ########### PROJECT CARD OPTIMIZATION ############# */
+.project-card-text {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.85);
+  height: 100%;
+  width: 100%;
+  opacity: 1;
+  padding-top: 3rem;
+}
+.project-card-img {
+  opacity: 0.9;
+  background-color: black;
+}
+.project-card-text > p {
+  color: white;
+  margin: 1rem 2rem;
+  max-height: 5.5rem;
+  overflow-y: hidden;
+}
+.project-card-text > h3 {
+  color: white;
+  margin: 2rem;
+  font-size: 1.5rem;
+}
+.project-card-text > button {
+  color: white;
+  margin: 1rem;
+  text-align: center;
+  display: block;
+  text-align: center;
+  width: 85%;
+  outline: none;
+  background-color: rgba(0, 0, 0, 0.325);
+  border: solid 2px var(--color-accent-2) !important;
+  filter: drop-shadow(1px 1px 10px rgba(0, 0, 0, 0.3));
+  margin-left: 2rem;
+}
+.project-card-text > button:hover {
+  color: white !important;
+  background-color: var(--color-accent-2) !important;
+}
+.project-card-text > span {
+  color: white;
+  font-size: 1.5rem;
+  display: block;
+  text-align: center;
 }
